traefik-endpoints/internal/rancher/endpoints.yaml
---
apiVersion: v1  
kind: Endpoints  
metadata:  
  name: rancher  
subsets:  
  - addresses:  
      - ip: 192.168.1.81
    ports:  
      - port: 443
